# chat_box

./: .gitignore  README.md
project/: .mcp.json  .vercelignore  README.md
project/backend/: .env.example  main.py  pyproject.toml  schemes_data.json
project/backend/app/: config.py  data.py  models.py  server.py  tools.py  utils.py
project/backend/app/api/: chat.py  recommend.py  schemes.py
project/backend/app/services/: chat.py  recommendation.py
project/frontend/: index.html  package-lock.json  package.json
project/frontend/src/: App.jsx  index.css
project/frontend/src/components/: ErrorBanner.jsx  Field.jsx  Header.jsx  Hero.jsx  InputForm.jsx  LoadingState.jsx  NumberInput.jsx  ResultsSection.jsx  SchemeCard.jsx  SchemeChat.jsx  SummaryBanner.jsx  Ticker.jsx
project/frontend/src/constants/: appConstants.js
project/frontend/src/services/: recommendApi.js
project/frontend/src/utils/: format.js
