[project]
name = "bdt-robo-advisor-backend"
version = "1.0.0"
description = "Bangladesh robo-advisor FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
